# ur-ball-tracking

./: README.md
ur_ball_description/: CMakeLists.txt  package.xml
ur_ball_description/launch/: ball.launch
ur_ball_description/urdf/: colour_ball.urdf.xacro
ur_robot_description/: CMakeLists.txt  package.xml
ur_robot_description/config/: ur5e_calibration.yaml
ur_robot_description/launch/: ur5e_upload.launch  view_ur5e.launch
ur_robot_description/urdf/: ur.gazebo.xacro  ur5e.urdf.xacro  ur5e_joint_limited_robot.urdf.xacro  ur5e_robot.urdf.xacro
ur_robot_gazebo/: CMakeLists.txt  package.xml
ur_robot_gazebo/launch/: ur5e.launch
